@@ -48,6 +48,17 @@
       </nz-input-group>
     </nz-form-control>
   </nz-form-item>
+
+  <nz-form-item>
+    <nz-form-label>Queue length </nz-form-label>
+    <nz-input-number
+      nzSize="small"
+      nzMax="10"
+      nzMin="0"
+      name="queue-infra"
+      [(ngModel)]="ms.game.automationManager.autoInfrastructure.queueLength"
+    ></nz-input-number>
+  </nz-form-item>
 </form>
 
 <ng-template #autoInfoTemplate>
