@@ -1,3 +1,7 @@
 .autoType {
   min-width: 7rem;
 }
+nz-input-number {
+  height: 22px;
+  width: 4rem;
+}
