@@ -11,6 +11,7 @@ export enum InfrastructureAutoBuyTypes {
 }
 export class InfrastructureAutoBuyer extends AbstractAutobuyer {
   autoBuyType: InfrastructureAutoBuyTypes = InfrastructureAutoBuyTypes.OFF;
+  queueLength = 10;
   constructor() {
     super();
     this.id = "Ifab";
@@ -27,40 +28,49 @@ export class InfrastructureAutoBuyer extends AbstractAutobuyer {
     if (!rm.worker.unlocked) return false;
     if (!rm.infrastructures[0].unlocked) return false;
     const sp = Game.getGame().spaceStationManager;
-    if (sp.toDo.length > 8) return false;
+    if (sp.toDo.length > 20) return false;
+    let ret = false;
+    const toAdd =
+      this.queueLength -
+      sp.toDo.reduce(
+        (a, b) => a + (b.spaceStation instanceof Infrastructure ? 1 : 0),
+        0
+      );
 
-    let selectedStation: Infrastructure;
-    switch (this.autoBuyType) {
-      case InfrastructureAutoBuyTypes.BEST_RATIO:
-        selectedStation = rm.unlockedInfrastructures.reduce(
-          (prev, cur) =>
-            prev.speedBonus
-              .div(prev.buildPriceNext)
-              .gt(cur.speedBonus.div(cur.buildPriceNext))
-              ? prev
-              : cur,
-          rm.unlockedInfrastructures[0]
-        );
-        break;
-      case InfrastructureAutoBuyTypes.CHEAP:
-        selectedStation = rm.unlockedInfrastructures.reduce(
-          (prev, cur) =>
-            prev.buildPriceNext.lt(cur.buildPriceNext) ? prev : cur,
-          rm.unlockedInfrastructures[0]
-        );
-        break;
-      case InfrastructureAutoBuyTypes.MOST_BONUS:
-        selectedStation = rm.unlockedInfrastructures.reduce(
-          (prev, cur) => (prev.speedBonus.gt(cur.speedBonus) ? prev : cur),
-          rm.unlockedInfrastructures[0]
-        );
-        break;
+    for (let i = 0; i < toAdd; i++) {
+      let selectedStation: Infrastructure;
+      switch (this.autoBuyType) {
+        case InfrastructureAutoBuyTypes.BEST_RATIO:
+          selectedStation = rm.unlockedInfrastructures.reduce(
+            (prev, cur) =>
+              prev.speedBonus
+                .div(prev.buildPriceNext)
+                .gt(cur.speedBonus.div(cur.buildPriceNext))
+                ? prev
+                : cur,
+            rm.unlockedInfrastructures[0]
+          );
+          break;
+        case InfrastructureAutoBuyTypes.CHEAP:
+          selectedStation = rm.unlockedInfrastructures.reduce(
+            (prev, cur) =>
+              prev.buildPriceNext.lt(cur.buildPriceNext) ? prev : cur,
+            rm.unlockedInfrastructures[0]
+          );
+          break;
+        case InfrastructureAutoBuyTypes.MOST_BONUS:
+          selectedStation = rm.unlockedInfrastructures.reduce(
+            (prev, cur) => (prev.speedBonus.gt(cur.speedBonus) ? prev : cur),
+            rm.unlockedInfrastructures[0]
+          );
+          break;
+      }
+      if (selectedStation) {
+        sp.addJob(selectedStation);
+        ret = true;
+      }
     }
-    if (selectedStation) {
-      sp.addJob(selectedStation);
-      return true;
-    }
-    return false;
+    return ret;
   }
   reload() {
     if (!this.on) this.autoBuyType = InfrastructureAutoBuyTypes.OFF;
@@ -69,11 +79,13 @@ export class InfrastructureAutoBuyer extends AbstractAutobuyer {
   getSave(): any {
     const ret = super.getSave();
     ret.aut = this.autoBuyType;
+    ret.qL = this.queueLength;
     return ret;
   }
   load(save: any): boolean {
     if (super.load(save)) {
       if ("aut" in save) this.autoBuyType = save.aut;
+      if ("qL" in save) this.queueLength = save.qL;
       this.reload();
       return true;
     }
