@@ -1,3 +1,6 @@
+11/10/2020
+-   Added queue length options for space stations and infrastructure automation
+
 10/10/2020
 -   Less overwhelming start
 -   Ui improvements
